--- a/index.html
+++ b/index.html
@@ -106,15 +106,21 @@ the V&amp;A Museum textiles handling collection.</p>
                                     <h2 class="major">Glossary</h2>
                                     <span class="image main"><img src="" alt="" /></span>
                                     <h2 id="hyperculture-glossary">Hyperculture Glossary</h2>
+<h3 id="concept-overview">Concept Overview</h3>
+<p><img src="/Hyperculture_circular_banner.png" alt="Hyperculture_circular_banner"></p>
+<p><a href="https://www.dropbox.com/s/7kmfq0vvurro1x3/Hyperculture%20-%20Hypermarks.pdf?dl=0">Please click to download presentation</a> (PDF Format)</p>
+<hr>
 <h3 id="year-garments">Year Garments</h3>
 <p>One of the signature garments produced by Hyperculture, a year garment can take a variety of forms. What makes any garment a year garment is whether or not it is marked using hypermarks and treated as an object being taken care of for future custodians.</p>
 <p>This means that any item of clothing can be called a year garment, and not just clothes designed specifically to be one.</p>
 <p>In this way, the year garment is not designed, but is something created out of a practice of marking.</p>
+<p>Year garments are not treated as disposable, but are either traded, handed down or upcycled - their messages and stories added to whatever new garment is made from their remains.</p>
+<p>Eventually, we will build a digital repository for custodians to track the ownership of, and the records stored on, these garments in order to facilitate their persistence and transmission into the future.</p>
 <hr>
 <h3 id="hypermarks">Hypermarks</h3>
 <p><img src="Marks_04.jpg" alt="Marks_04" title="Photography by Yemi Awosile"></p>
 <p><img src="Marks_01.jpg" alt="Marks_01" title="Photography by Yemi Awosile"></p>
-<p><a href="Life_span.pdf">Hypermarks Codex</a></p>
+<p><a href="Life_span.pdf">Hypermarks Codex</a> (PDF file - <em>Created by Yemi Awosile</em>)</p>
 
                                 </article>
                             
@@ -167,6 +173,30 @@ the V&amp;A Museum textiles handling collection.</p>
 <p><img src="16.jpg" alt="16"></p>
 <p><img src="18.jpg" alt="18"></p>
 <p><img src="21.jpg" alt="21"></p>
+<hr>
+<h3 id="event-schedule">Event Schedule</h3>
+<table>
+<thead>
+<tr>
+<th>Item</th>
+<th>Date &amp; Time</th>
+</tr>
+</thead>
+<tbody>
+<tr>
+<td>Instagram Live talk with Yegwa and Yemi</td>
+<td>18th September 2020; 4pm WAT/BST</td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+</tr>
+<tr>
+<td></td>
+<td></td>
+</tr>
+</tbody>
+</table>
 
                                 </article>
                             
