--- a/index.html
+++ b/index.html
@@ -173,6 +173,7 @@ the V&amp;A Museum textiles handling collection.</p>
 <p><img src="16.jpg" alt="16"></p>
 <p><img src="18.jpg" alt="18"></p>
 <p><img src="21.jpg" alt="21"></p>
+<p>For a more comprehensive overview of the Hyperculture project, please check out our <a href="https://www.hyperculture.site/#glossary">Glossary</a>.</p>
 <hr>
 <h3 id="event-schedule">Event Schedule</h3>
 <table>
@@ -185,15 +186,7 @@ the V&amp;A Museum textiles handling collection.</p>
 <tbody>
 <tr>
 <td>Instagram Live talk with Yegwa and Yemi</td>
-<td>18th September 2020; 4pm WAT/BST</td>
-</tr>
-<tr>
-<td></td>
-<td></td>
-</tr>
-<tr>
-<td></td>
-<td></td>
+<td>TBC</td>
 </tr>
 </tbody>
 </table>
