--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@ the V&amp;A Museum textiles handling collection.</p>
 <p>The exhibition is comprised of a design proposal we are calling the <em>Year Garment</em>, which is a type of garment originally conceived as a cultural artifact that was part of a speculative fiction project that is being developed by Newtype Studios.</p>
 <p><img src="illo-2a.jpg" alt="PHOTO-2020-08-31-22-14-29"></p>
 <p><img src="illo-1a.jpg" alt="PHOTO-2020-08-31-22-14-29a"></p>
-<p><img src="illo-3a.jpg" alt="PHOTO-2020-09-05-17-25-43"></p>
+<p><em>Illustrations by Philip Fagbeyiro</em></p>
 <p>Developed further under the Hyperculture project, it is imagined as not only an item of clothing, but also as a medium for the recording, transmitting and encoding experiences and knowledge.</p>
 <hr>
 <p>The second component is a short narrative following the lives of three generations in a family through the perspective of a particular Year Garment that is handed down</p>
@@ -163,12 +163,7 @@ the V&amp;A Museum textiles handling collection.</p>
 </code></pre></div><hr>
 <p>As part of the exhibition, Yemi also created a series of textiles showcasing the various <em>hypermarks</em> created for the Hyperculture project.</p>
 <p>The hypermarks language is made up of a series of ideograms each one symbolising a certain type of event, emotion or relationship. They work on their own and can be used in conjunction with one another in order to create new meanings.</p>
-<p><img src="1.jpg" alt=""></p>
-<p><img src="1a.jpg" alt="1a"></p>
-<p><img src="2.jpg" alt="2"></p>
 <p><img src="3.jpg" alt="3"></p>
-<p><img src="4.jpg" alt="4"></p>
-<p><img src="6.jpg" alt="6"></p>
 <p><img src="11.jpg" alt="11"></p>
 <p><img src="16.jpg" alt="16"></p>
 <p><img src="18.jpg" alt="18"></p>
@@ -186,7 +181,7 @@ the V&amp;A Museum textiles handling collection.</p>
 <tbody>
 <tr>
 <td>Instagram Live talk with Yegwa and Yemi</td>
-<td>TBC</td>
+<td>16th September 2020, 6pm WAT/BST</td>
 </tr>
 </tbody>
 </table>
