--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@ the V&amp;A Museum textiles handling collection.</p>
 </thead>
 <tbody>
 <tr>
-<td>Instagram Live talk with Yegwa and Yemi</td>
+<td>Instagram Live talk with Yegwa and Yemi. Hosted on <a href="https://www.instagram.com/ivwri">@ivwri&rsquo;s Instagram account</a>.</td>
 <td>16th September 2020, 6pm WAT/BST</td>
 </tr>
 </tbody>
